--- a/HTMLLevel2/practiceQ4.html
+++ b/HTMLLevel2/practiceQ4.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Block And Inline</title>
+    <title>SuperScript And SubScript</title>
 </head>
 
 <body>
-    <h1>My Name is</h1>
-    <p>Hello World</p>
-
+    <h1>a<sup>2</sup>+ b<sup>2</sup> + c<sup>2</sup></h1>
+    <h1>C<sup>6</sup>H<sub>12</sub>O<sub>6</sub></h1>
 </body>
 
 </html>
